# subtitles_translator

./: README.md  pyproject.toml  subtitle_converter.py
Input Subtitles/: horizon.an.american.saga.chapter.1.2024.2160p.web.hevc_Subtitles01.ENG.srt
Output Subtitles/: horizon.an.american.saga.chapter.1.2024.2160p.web.hevc_Subtitles01.ENG_heb.srt
